[gd_scene load_steps=4 format=3 uid="uid://cwox6etsdpnh8"]

[ext_resource type="Script" path="res://Scripts/SidePanelNodes/EndPathNodePanel.gd" id="1_tde0e"]
[ext_resource type="FontFile" uid="uid://2eq6t1lcw61" path="res://Assets/Fonts/NotoSans-Italic.ttf" id="2_8pysj"]

[sub_resource type="LabelSettings" id="LabelSettings_wvoxr"]
font = ExtResource("2_8pysj")
font_size = 12
font_color = Color(0.498039, 0.498039, 0.498039, 1)

[node name="TargetContainer" type="VBoxContainer"]
offset_right = 353.0
offset_bottom = 26.0
theme_override_constants/separation = 10
script = ExtResource("1_tde0e")

[node name="SubContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Target" type="Label" parent="SubContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Next story"

[node name="LineEdit" type="LineEdit" parent="SubContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
text = "Note: Variables are kept with their values between stories when you use this node."
label_settings = SubResource("LabelSettings_wvoxr")
autowrap_mode = 3

[connection signal="focus_exited" from="SubContainer/LineEdit" to="." method="_on_next_story_focus_exited"]
[connection signal="text_submitted" from="SubContainer/LineEdit" to="." method="_on_next_story_text_submitted"]
